--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "adonis-version": "4.0.0",
   "description": "AdonisJS Blog Demo Application",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js >> app.log",
     "test": "node ace test --timeout=0",
     "build": "postcss -o public/app.css resources/css/app.css",
     "build:prod": "cross-env NODE_ENV=production postcss -o public/app.css resources/css/app.css"
